fix: Railway deployment — dynamic PORT, disable Redis, fix crash